tests/integration/error/break_outside_loop.alo
// expect-error: 'break' can only be used inside a loop

fun main() -> void {
    break;
}
